Bug 357651 - No error message if file pasting failed
Summary: No error message if file pasting failed
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 15.12.0
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-07 13:42 UTC by Fabian Vogt
Modified: 2016-10-04 15:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2016-01-07 13:42:08 UTC
Copying a file into clipboard and then pasting it into a directory with insufficient space does not work and no error message is shown.
I tracked it down to

      connect(m_view, &DolphinView::directoryLoadingCompleted,
            m_messageWidget, &KMessageWidget::hide);

in src/dolphinviewcontainer.cpp.

The issue is that pasting a file causes an event to be triggered by KDirNotify, causing a refresh of the directory and in turn the signal directoryLoadingCompleted is emitted. This hides KMessageWidget again, so that it is never shown.

Removing the connection isn't a proper solution and I don't know dolphin's code well enough to provide a proper fix.




Reproducible: Always
Comment 1 Adam 2016-09-27 16:52:54 UTC
I just encountered the same issue in Dolphin 16.08.0 (KDE Frameworks 5.26.0, openSUSE Leap 42.2 beta), when dragging files in splitview from the hard disk to a pen drive.

I was puzzled because just the second before I moved a smaller file and it worked. If that were not the case, my work would be stalled. Would be cool if this is fixed for 5.8 LTS, because i really like the new version :D  (coming from mint/kde 4.14)
Comment 2 Elvis Angelaccio 2016-09-28 14:02:18 UTC
I can reproduce, marking as confirmed.
Comment 3 Elvis Angelaccio 2016-09-28 14:15:11 UTC
Patch: https://git.reviewboard.kde.org/r/129061/
Comment 4 Elvis Angelaccio 2016-10-04 15:36:10 UTC
Git commit 0e5e43aa9d84b2a38db99c469de91e4de8017fc7 by Elvis Angelaccio.
Committed on 04/10/2016 at 15:30.
Pushed by elvisangelaccio into branch 'Applications/16.08'.

Hide message widgets only when reloading the view

Otherwise an error message might be hidden before it's even shown.
FIXED-IN: 16.08.2
REVIEW: 129061

M  +1    -1    src/dolphinmainwindow.cpp
M  +6    -2    src/dolphinviewcontainer.cpp
M  +5    -0    src/dolphinviewcontainer.h

http://commits.kde.org/dolphin/0e5e43aa9d84b2a38db99c469de91e4de8017fc7