Hide message widgets only when reloading the view

Otherwise an error message might be hidden before it's even shown.

BUG: 357651
FIXED-IN: 16.08.2
REVIEW: 129061