src/dolphinviewcontainer.cpp
@@ -98,8 +98,6 @@ DolphinViewContainer::DolphinViewContainer(const QUrl& url, QWidget* parent) :
             m_urlNavigator, &KUrlNavigator::setLocationUrl);
     connect(m_view, &DolphinView::urlChanged,
             m_messageWidget, &KMessageWidget::hide);
-    connect(m_view, &DolphinView::directoryLoadingCompleted,
-            m_messageWidget, &KMessageWidget::hide);
     connect(m_view, &DolphinView::writeStateChanged,
             this, &DolphinViewContainer::writeStateChanged);
     connect(m_view, &DolphinView::requestItemInfo,
@@ -366,6 +364,12 @@ QString DolphinViewContainer::placesText() const
     }
 
     return text;
+}
+
+void DolphinViewContainer::reload()
+{
+    view()->reload();
+    m_messageWidget->hide();
 }
 
 void DolphinViewContainer::setUrl(const QUrl& newUrl)
